# SCIF30005_DAQ

./: .gitignore  CMakeLists.txt  README.md
onboard_temp_daq/: CMakeLists.txt  onboard_temp_daq.c
onboard_temp_daq_multicore/: CMakeLists.txt  onboard_temp_daq_multicore.c
onboard_temp_daq_multicore_binary_send/: CMakeLists.txt  onboard_temp_daq_multicore_binary_send.c
onboard_temp_daq_multicore_buffer/: CMakeLists.txt  onboard_temp_daq_multicore_buffer.c
onboard_temp_daq_multicore_partial_data_send/: CMakeLists.txt  onboard_temp_daq_multicore_partial_data_send.c
python/: file_sizes_plot.py  pico_ro.py  pico_ro_data_loss_check.py  pico_ro_packed.py
